# fastapi-vite-react

./: .env.example  .gitignore  README.md  alembic.ini  predeploy.sh  pyproject.toml
api/: main.py
api/routers/: user.py
application/schema/: __init__.py  auth.py  user.py
application/services/: user_service.py
application/utils/: config.py  oauth2.py
domain/models/: user.py
infrastructure/accessors/: azure_blob_storage_accessor.py
persistence/: database.py
persistence/migrations/: env.py
persistence/migrations/versions/: 2e303e4670c6_initial_migration.py  993af01835d5_create_extensions.py
ui/: .env.example  .eslintrc.cjs  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: AuthenticationGuard.tsx  EmptyState.tsx  LogoutButton.tsx  NavBar.tsx
ui/src/contexts/: LayoutContext.tsx  SharedEditorContext.tsx
ui/src/core/: Redirector.tsx  Routing.tsx  constants.ts  interfaces.ts
ui/src/framework/: Alert.tsx  Button.module.css  Button.tsx  Drawer.tsx  FullPageLoader.module.css  FullPageLoader.tsx  Input.module.css  Input.tsx
ui/src/hooks/: usePageTitle.tsx  usePrevious.tsx
ui/src/hooks/api/: useCompleteOnboarding.tsx  useCreateAccount.tsx  useUpdateUserSettings.tsx
ui/src/layouts/: AppLayout.tsx
ui/src/pages/: CreateAccountPage.module.css  CreateAccountPage.tsx  InfoPage.tsx  OnboardingPage.module.css  OnboardingPage.tsx
ui/src/stories/: Button.stories.ts  FullPageLoader.stories.tsx
ui/src/util/: config.ts  fetcher.ts  file.ts  react-query.ts  shallowObjectDiff.ts  url.ts
